k8s/addons/istio/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: <NAMESPACE>
  labels:
    istio.io/dataplane-mode: ambient   # ambient | none
    istio.io/use-waypoint: waypoint  # for ambient L7 features
    # istio-injection: enabled  # for sidecar
