k8s/addons/istio/canary-virtualservice.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: <APP>
  namespace: <NAMESPACE>
spec:
  host: <K8S_SERVICE_NAME>
  subsets:
    - name: v1
      labels:
        version: v1  # labels of deployment pod template
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: <APP>
  namespace: <NAMESPACE>
spec:
  hosts:
    - <K8S_SERVICE_NAME>
  # gateways:
  #   - <GATEWAY_NAME>
  http:
    - match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: <K8S_SERVICE_NAME>
            subset: v2  # subsets[].name in DestinationRule
    - route:
        - destination:
            host: <K8S_SERVICE_NAME>
            subset: v1
          weight: 90
        - destination:
            host: <K8S_SERVICE_NAME>
            subset: v2
          weight: 10
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: 5xx,connect-failure,refused-stream
