k8s/addons/istio/canary.yml
apiVersion: v1
kind: Service
metadata:
  name: <APP>
  namespace: <NAMESPACE>
spec:
  selector:
    app: <APP>
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: <APP>-v1
  namespace: <NAMESPACE>
spec:
  selector:
    app: <APP>
    version: v1
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: <APP>-v2
  namespace: <NAMESPACE>
spec:
  selector:
    app: <APP>
    version: v2
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: <APP>-canary
  namespace: <NAMESPACE>
spec:
  parentRefs:
    - group: ""
      kind: Service     # Service = mesh 내부 | Gateway = 외부 유입
      name: <APP>
      port: 8080
  rules:
    - matches:
        - headers:
            - name: x-canary
              value: "true"
      backendRefs:
        - name: <APP>-v2
          port: 8080
    - backendRefs:
        - name: <APP>-v1
          port: 8080
          weight: 90
        - name: <APP>-v2
          port: 8080
          weight: 10
