k8s/addons/istio/fault-injection.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: <APP>-fault
  namespace: <NAMESPACE>
spec:
  hosts:
    - <APP>
  http:
    - fault:
        abort:
          percentage:
            value: 30
          httpStatus: 500
        # delay:
        #   percentage:
        #     value: 30
        #   fixedDelay: 5s
      route:
        - destination:
            host: <APP>
