k8s/addons/istio/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: <GATEWAY>
  namespace: <NAMESPACE>
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same        # Same | All | Selector
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: <TLS_SECRET>
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: <APP>
  namespace: <NAMESPACE>
spec:
  parentRefs:
    - name: <GATEWAY>
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix   # PathPrefix | Exact | RegularExpression
            value: /<APP>
      backendRefs:
        - name: <APP>
          port: 8080
      timeouts:
        request: 5s
